/*
 * $Id$
 */

2011-03-31 18:43 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  src/common/wxhfuncs.prg
     ! Fixed constructor of wxhHBValidator class to correctly change the validation
       method when changing the TField on the control
     * added 'Field' property to wxhHBValidator

  *  src/raddox/TField.prg
     ! Commented out section of code that process changes to a KeyField when writting
       value to physical table on ::SetData
     ! Fixed TObjectField:GetAsVariant to return the BaseKeyField

  *  src/raddox/TTable.prg
     * changed name of index used to 'recycle' records from 'Deleted' to '__AVAIL'
     % enhanced method 'DeleteChilds' and 'HasChilds'

2011-03-31 00:06 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  *  include/wxHarbour/raddox.ch
     * added WARN clause to ON VALIDATE clause, contains warning message if validation fails

  *  include/wxHarbour/wxbase/wx_Dialog.h
  *  src/wxbase/manwindows/wx_Dialog.cpp
     * added (virtual) validate() member that calls HB Validate function (if any) and drops to
       wxWindow:Validate (that calls wxWindow:::Validate)

  *  include/wxHarbour/wxharbour.ch
     * changed clause name from WARNING to WARN, changed WHEN to VALIDATE

  *  src/common/wxhfuncs.prg
     % using TField's 'ON VALIDATE' 'WARN' clauses to control validator

  *  src/raddox/TField.prg
     * renamed method 'IsValid' to 'Validate'
     * added data 'OnValidateWarn', holds message if validation fails
     * added protection agains disabling a MasterKey or PrimaryKey component
     ! Fixed using value of BaseKeyField to assign linked table on ::SetKeyVal
     * removed (unneeded) code on ::SetKeyVal
     * added ::GetAsString on TDateTimeField class
     ! Fixed not drop time component on TDateTimeField:SetAsVariant
     ! Fixed TDateTimeField:SetTime
     * renamed method 'GetReferenceField' to 'BaseKeyField' and made it protected
     * TObjectField:BaseKeyField gets the field from linked table